--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,5 +11,7 @@
   "devDependencies": {
     "bun-types": "latest"
   },
-  "module": "src/index.js"
+  "module": "src/index.js",
+  "main": "src/index.ts",
+  "types": "src/index.ts"
 }
