--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "noibo.vanphubinh",
-  "devDependencies": {
-    "@types/bun": "latest",
-    "turbo": "^2.0.13"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "engines": {
-    "node": ">=22"
-  },
-  "packageManager": "bun@1.1.24",
-  "type": "module",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ]
+	"name": "noibo.vanphubinh",
+	"devDependencies": {
+		"@biomejs/biome": "1.8.3",
+		"@types/bun": "latest",
+		"turbo": "^2.0.13"
+	},
+	"peerDependencies": {
+		"typescript": "^5.0.0"
+	},
+	"engines": {
+		"node": ">=22"
+	},
+	"packageManager": "bun@1.1.24",
+	"type": "module",
+	"workspaces": ["apps/*", "packages/*"]
 }
