--- a/packages/libs/package.json
+++ b/packages/libs/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "libs",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest",
-    "config": "workspace:*"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "dependencies": {
-    "@elysiajs/eden": "^1.1.2",
-    "elysia": "^1.1.6",
-    "server": "workspace:*"
-  },
-  "export": {
-    "api": "./api"
-  }
+	"name": "libs",
+	"module": "index.ts",
+	"type": "module",
+	"devDependencies": {
+		"@types/bun": "latest",
+		"server": "workspace:*"
+	},
+	"peerDependencies": {
+		"typescript": "^5.0.0"
+	},
+	"dependencies": {
+		"@elysiajs/eden": "^1.1.2",
+		"elysia": "^1.1.6"
+	},
+	"export": {
+		"api": "./api"
+	}
 }
