--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,6 +9,8 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@mantine/core": "^7.12.1",
+		"@mantine/hooks": "^7.12.1",
 		"million": "^3.1.11",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
@@ -18,6 +20,9 @@
 		"@types/react-dom": "^18.2.17",
 		"@vitejs/plugin-react-swc": "^3.5.0",
 		"libs": "workspace:*",
+		"postcss": "^8.4.41",
+		"postcss-preset-mantine": "^1.17.0",
+		"postcss-simple-vars": "^7.0.1",
 		"typescript": "^5.2.2",
 		"vite": "^5.0.8"
 	}
