--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -11,11 +11,16 @@
 	"dependencies": {
 		"@mantine/core": "^7.12.1",
 		"@mantine/hooks": "^7.12.1",
+		"@tanstack/react-query": "^5.51.23",
+		"@tanstack/react-router": "^1.48.1",
 		"million": "^3.1.11",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
+		"@tanstack/eslint-plugin-query": "^5.51.15",
+		"@tanstack/router-devtools": "^1.48.1",
+		"@tanstack/router-plugin": "^1.47.0",
 		"@types/react": "^18.2.43",
 		"@types/react-dom": "^18.2.17",
 		"@vitejs/plugin-react-swc": "^3.5.0",
